frontend/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: frontend
      role: client
  template:
    metadata:
      labels:
        tier: frontend
        role: client
    spec:
      containers:
      - name: echo-client
        image: katsew/kodama:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "10m"
        command: ["kodama", "http", "client"]
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 3
          successThreshold: 3
          failureThreshold: 3
