frontend/netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allowonly-gateway
spec:
  podSelector:
    matchLabels:
      tier: frontend
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - ipBlock:
          cidr: 130.211.0.0/22
      - ipBlock:
          cidr: 35.191.0.0/16
      - ipBlock:
          cidr: 30.211.0.0/22
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to: []
      # - podSelector:
      #     matchLabels:
      #       tier: backend
      # - ipBlock:
      #     cidr: 130.211.0.0/22
      # - ipBlock:
      #     cidr: 35.191.0.0/16
      # - ipBlock:
      #     cidr: 30.211.0.0/22
      # ports:
      #   - protocol: TCP
      #     port: 9090
      #   - protocol: TCP
      #     port: 8080
